# obsidian-granola-sync

./: .env.example  .gitignore  .mcp.json  LICENSE  MANIFEST.in  MCP_SETUP.md  README.md  SKILL.md  config.example.yaml  granola_sync.py  mcp_server.py  process_transcripts.py  pyproject.toml  requirements.txt  run_sync.sh  setup_launchd.sh  utils.py
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/skills/sync/: SKILL.md
.github/workflows/: test.yml
commands/: list.md  status.md  sync.md
launchd/: com.granola-sync.plist  com.granola-sync.plist.template
tests/: __init__.py  test_skill.py
